@@ -767,6 +767,8 @@ Release 2.7.0 - UNRELEASED
     HDFS.7849. Update documentation for enabling a new feature in rolling
     upgrade ( J.Andreina via vinayakumarb )
 
+    HDFS-7962. Remove duplicated logs in BlockManager. (yliu)
+
   OPTIMIZATIONS
 
     HDFS-7454. Reduce memory footprint for AclEntries in NameNode.
